edit font size header footer, add js hide menu when scroll down and show menu when scroll up menu

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!--    Begin Header-->
     <div id="header">
         <div class="config-top-banner">
-            <p class="slogan text-center font-weight-bold p-2 mb-0">
+            <p class="slogan">
                 Xài Key bản quyền
                 <span class="icon-slogan mr-1 ml-1">
                             <i class="fa-sharp fa-solid fa-key"></i>
@@ -51,7 +51,8 @@
                         <span>0</span>
                     </span>
                     <span class="icon-item">
-                        <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"></i></span>
+                        <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
+                                 data-target="#exampleModal"></i></span>
                     </span>
                 </div>
             </div>
@@ -59,7 +60,7 @@
     </div>
     <!--    End Header-->
     <!--Content Begin-->
-    <div id="content" style="margin-top: 122px">
+    <div id="content" style="margin-top: 116px">
         <!--Contact area start-->
         <div class="contact_area">
             <div class="container">
