--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--    Begin Header-->
     <div id="header">
         <div class="config-top-banner">
-            <p class="slogan text-center font-weight-bold p-2 mb-0">
+            <p class="slogan">
                 Xài Key bản quyền
                 <span class="icon-slogan mr-1 ml-1">
                             <i class="fa-sharp fa-solid fa-key"></i>
@@ -60,8 +60,8 @@
     <!--    Begin SlideShow-->
     <div id="slideShow">
         <div class="container position-relative">
-            <img class="mySlides" src="image/slideshow/cyberpunk-city.jpg" alt="">
-            <img class="mySlides" src="image/slideshow/nature.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/wgr-autodesk-slider-min.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/windows-11-slide-min.jpg" alt="">
             <img class="mySlides" src="image/slideshow/sky.jpg" alt="">
 
             <div class="dotList">
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="products-new">
                 <div class="product-title d-flex justify-content-between">
-                    <h3 class="section-title"><i class="fa-solid fa-bolt"></i>Sản Phẩm Mới</h3>
+                    <h3 class="section-title mb-0"><i class="fa-solid fa-bolt"></i>Sản Phẩm Mới</h3>
                     <a class="more-product" href="">Xem thêm</a>
                 </div>
                 <div class="products">
@@ -168,7 +168,7 @@
             </div>
             <div class="products-trend">
                 <div class="product-title d-flex justify-content-between">
-                    <h3 class="section-title"><i class="fa-solid fa-arrow-trend-up"></i>Sản Phẩm Thịnh Hành</h3>
+                    <h3 class="section-title mb-0"><i class="fa-solid fa-arrow-trend-up"></i>Sản Phẩm Thịnh Hành</h3>
                     <a class="more-product" href="">Xem thêm</a>
                 </div>
                 <div class="products">
@@ -262,7 +262,7 @@
     <div id="footer">
         <div class="container d-flex justify-content-sm-between">
             <div class="about-us-footer">
-                <div class="big-title-footer"><h4>THÔNG TIN LIÊN HỆ</h4></div>
+                <div class="big-title-footer"><h4>Thông Tin Liên Hệ</h4></div>
                 <div class="address">
                     <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
                     <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="product-footer">
-                <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
+                <div class="big-title-footer"><h4>Sản Phẩm</h4></div>
                 <p>Windows</p>
                 <p>Microsoft Office</p>
                 <p>Anti Virus</p>
@@ -278,14 +278,14 @@
                 <p>Adobe</p>
             </div>
             <div class="policy">
-                <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
+                <div class="big-title-footer"><h4>Chính Sách</h4></div>
                 <p>Chính sách thanh toán</p>
                 <p>Chính sách bảo hành</p>
                 <p>Chính sách đổi trả</p>
                 <p>Chính sách bảo mật</p>
             </div>
             <div class="social">
-                <div class="big-title-footer"><h4>XÃ HỘI</h4></div>
+                <div class="big-title-footer"><h4>Xã Hội</h4></div>
                 <div class="social-icon">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
