--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="col-8">
                     <ul class="drop-menu">
                         <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
-                        <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
+                        <li class="menu-item"><a class="p-3" href="product.html">Sản Phẩm</a></li>
                         <li class="menu-item"><a class="p-3" href="about-us.html">Giới Thiệu</a></li>
                         <li class="menu-item"><a class="p-3" href="contact.html">Liên Hệ</a></li>
                     </ul>
@@ -50,7 +50,8 @@
                     </span>
                     <span class="icon-item">
                         <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
-                                 data-target="#exampleModal"></i></span>
+                                 data-target="#exampleModal"></i>
+                        </span>
                     </span>
                 </div>
             </div>
@@ -59,10 +60,10 @@
     <!--    End Header-->
     <!--    Begin SlideShow-->
     <div id="slideShow">
-        <div class="container position-relative">
-            <img class="mySlides" src="image/slideshow/wgr-autodesk-slider-min.jpg" alt="">
-            <img class="mySlides" src="image/slideshow/windows-11-slide-min.jpg" alt="">
-            <img class="mySlides" src="image/slideshow/sky.jpg" alt="">
+        <div class="position-relative">
+            <img class="mySlides" src="image/slideshow/windows.png" alt="">
+            <img class="mySlides" src="image/slideshow/raw.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/adobe.jpg" alt="">
 
             <div class="dotList">
                 <span class="dot" onclick="currentDiv(1)"></span>
@@ -74,7 +75,7 @@
     <!--    End SlideShow-->
     <!--    Begin Content-->
     <div id="content">
-        <div class="container pt-4 d-flex justify-content-center row m-auto">
+        <div class="container pt-4 d-flex justify-content-center row mt-4 mb-4 ml-auto mr-auto">
             <div class="brand col-lg-2">
                 <a href="">
                     <img src="image/brand/office-365.png" alt="">
@@ -108,13 +109,14 @@
         </div>
         <div class="container">
             <div class="products-new">
-                <div class="product-title d-flex justify-content-between">
-                    <h3 class="section-title mb-0"><i class="fa-solid fa-bolt"></i>Sản Phẩm Mới</h3>
+                <div class="product-title">
+                    <h3 class="section-title"><i class="fa-solid fa-bolt"></i>Sản Phẩm Mới</h3>
                     <a class="more-product" href="">Xem thêm</a>
                 </div>
+                <span class="heading_divider"></span>
                 <div class="products">
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -124,7 +126,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -134,7 +136,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -144,7 +146,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -154,7 +156,37 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -173,7 +205,7 @@
                 </div>
                 <div class="products">
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -183,7 +215,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -193,7 +225,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -203,7 +235,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -213,7 +245,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -223,7 +255,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -233,7 +265,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
@@ -243,7 +275,7 @@
                         </div>
                     </div>
                     <div class="product-item">
-                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <img class="product-image" src="image/slideshow/adobe.jpg" alt="">
                         <p class="product-type">Windows</p>
                         <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
                         <span class="product-price">100.000</span><span class="currency">VND</span>
