--- a/product.html
+++ b/product.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
-
 </head>
 <body>
-
 <div id="main">
     <!--    Begin Header-->
     <div id="header">
@@ -30,7 +28,7 @@
                     <ul class="drop-menu">
                         <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
                         <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
-                        <li class="menu-item"><a class="p-3" href="#">Giới Thiệu</a></li>
+                        <li class="menu-item"><a class="p-3" href="about-us.html">Giới Thiệu</a></li>
                         <li class="menu-item"><a class="p-3" href="contact.html">Liên Hệ</a></li>
                     </ul>
                 </div>
@@ -52,83 +50,24 @@
                     </span>
                     <span class="icon-item">
                         <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
-                                 data-target="#exampleModal"></i></span>
+                                 data-target="#exampleModal"></i>
+                        </span>
                     </span>
                 </div>
             </div>
         </div>
     </div>
     <!--    End Header-->
-    <!--Content Begin-->
+    <!--    Begin Content-->
     <div id="content">
-        <!--Contact area start-->
-        <div class="contact_area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12">
-                        <div class="contact_message content">
-                            <h3>Liên hệ với chúng tôi</h3>
-                            <p>Nếu bạn có bất cứ vấn đề hoặc thắc mắc nào có thể phản hồi với chúng tôi qua các cách
-                                thức liên lạc bên dưới.</p>
-                            <p>Hoặc có thể điền vào biểu mẫu bên cạnh để mô tả sơ lược về vấn đề mà bạn gặp phải.</p>
-                            <ul>
-                                <li><i class="fa fa-fax"></i> Địa chỉ liên hệ: Khu phố 6, phường Linh Trung, TP. Thủ
-                                    Đức, TP.HCM
-                                </li>
-                                <li><i class="fa-solid fa-envelope"></i> Email nhận phản hồi: 20130260@st.hcmuaf.edu.vn
-                                </li>
-                                <li><i class="fa fa-phone"></i> Số điện thoại liên lạc: 0852995378</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="contact_message form">
-                            <h3>Mô tả vấn đề của bạn</h3>
-                            <form id="contact-form" method="POST">
-                                <p>
-                                    <label> Họ và tên (bắt buộc)</label>
-                                    <input name="name" placeholder="Họ và tên*" type="text">
-                                </p>
-                                <p>
-                                    <label> Địa chỉ email (bắt buộc)</label>
-                                    <input name="email" placeholder="Địa chỉ email*" type="email">
-                                </p>
-                                <p>
-                                    <label> Số điện thoại</label>
-                                    <input name="subject" placeholder="Số điện thoại" type="text">
-                                </p>
-                                <div class="contact_textarea">
-                                    <label> Mô tả vấn đề (bắt buộc)</label>
-                                    <textarea placeholder="Mô tả*" name="message" class="form-control2"></textarea>
-                                </div>
-                                <button type="submit"> Gửi</button>
-                                <p class="form-messege"></p>
-                            </form>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--Contact area end-->
-
-        <!--Map Location Begin-->
-        <div class="map">
-            <div class="map_location">
-                <h3>Vị trí trên bản đồ:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.214525476974!2d106.78957301590339!3d10.87128166040572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276398969f7b%3A0x9672b7efd0893fc4!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBOw7RuZyBMw6JtIFRwLiBI4buTIENow60gTWluaA!5e0!3m2!1svi!2s!4v1666705870481!5m2!1svi!2s"
-                        width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-        <!--Map Location End-->
     </div>
     <!--    End Content-->
     <!--    Begin Footer-->
     <div id="footer">
         <div class="container d-flex justify-content-sm-between">
             <div class="about-us-footer">
-                <div class="big-title-footer"><h4>THÔNG TIN LIÊN HỆ</h4></div>
+                <div class="big-title-footer"><h4>Thông Tin Liên Hệ</h4></div>
                 <div class="address">
                     <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
                     <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
@@ -136,7 +75,7 @@
                 </div>
             </div>
             <div class="product-footer">
-                <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
+                <div class="big-title-footer"><h4>Sản Phẩm</h4></div>
                 <p>Windows</p>
                 <p>Microsoft Office</p>
                 <p>Anti Virus</p>
@@ -144,14 +83,14 @@
                 <p>Adobe</p>
             </div>
             <div class="policy">
-                <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
+                <div class="big-title-footer"><h4>Chính Sách</h4></div>
                 <p>Chính sách thanh toán</p>
                 <p>Chính sách bảo hành</p>
                 <p>Chính sách đổi trả</p>
                 <p>Chính sách bảo mật</p>
             </div>
             <div class="social">
-                <div class="big-title-footer"><h4>XÃ HỘI</h4></div>
+                <div class="big-title-footer"><h4>Xã Hội</h4></div>
                 <div class="social-icon">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -247,11 +186,12 @@
     </div>
 </div>
 <!--End Login-->
+
+
 <!--    Script-->
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
-
-
+<script src="js/slideShow.js"></script>
 </body>
 </html>
