create detail file

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -288,7 +288,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -316,7 +316,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
@@ -344,7 +344,7 @@
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
                             </button>
                             <button class="detail">
-                                <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                                <a href="product.html"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                             </button>
                         </div>
                     </div>
