--- a/details.html
+++ b/details.html
@@ -60,9 +60,38 @@
     <!--    End Header-->
     <!--    Begin Content-->
     <div id="content">
-
+        <div class="detail-box">
+            <div class="detail-box-alp">
+                <img class="img-product" src="image/product-image/antivirus/5766_0_trend_micro.png" alt="">
+            </div>
+            <div class="detail-box-omg">
+                <div class="detail-box-omg-text">
+                <p class="detail-title">Windows 10 (Home/Edu/Pro)</p>
+                <p class="detail-type">Windows</p>
+                <p class="detail-price">Giá: 100000</p><p class="currency">VND</p>
+                <p class="text-bolder">Thời hạn:</p><p class="text-normal">1 năm</p>
+                <p class="text-bolder">Bao gồm</p><p class="text-normal">Windows 10 dành cho home, edu, pro</p>
+                <p class="text-bolder">Hỗ trợ:</p><p class="text-normal">Windows</p>
+                <p class="text-bolder">Số lượng thiết bị:</p><p class="text-normal">4</p>
+                </div>
+            </div>
+                <div class="quantity buttons_added">
+                    <input type="button" value="-" class="minus button is-form">		<label class="screen-reader-text" for="quantity_635fe0f0029e4">Số lượng</label>
+                    <input type="number" id="quantity_635fe0f0029e4" class="input-text qty text" step="1" min="1" max="9999" name="quantity" value="1" title="SL" size="4" pattern="[0-9]*" inputmode="numeric" aria-labelledby="Loa Bluetooth Sony SRS-X11 10W số lượng">
+                    <input type="button" value="+" class="plus button is-form">
+                </div>
+                <button type="submit" name="add-to-cart" class="single_add_to_cart_button button alt">Thêm vào giỏ</button>
+                <button type="submit" name="contact" class="contact-message-to-page">
+                    <p>Liên hệ tư vấn</p>
+                    <span>Liên hệ tư vấn nhanh qua facebook, zalo</span>
+                </button>
+        </div>
     </div>
     <!--    End Content-->
+
+
+
+
     <!--    Begin Footer-->
     <div id="footer">
         <div class="container d-flex justify-content-sm-between">
