edit animation and create product page

--- a/product.html
+++ b/product.html
@@ -60,7 +60,26 @@
     <!--    End Header-->
     <!--    Begin Content-->
     <div id="content">
+        <div class="container d-flex">
+            <div class="filter">
 
+            </div>
+            <div class="product-filter">
+                <div class="product-item">
+                    <img class="product-image" src="image/product-image/antivirus/5766_0_trend_micro.png" alt="">
+                    <p class="product-type">Windows</p>
+                    <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                    <span class="product-price">100.000</span><span class="currency">VND</span>
+                    <div class="product-choose">
+                        <button class="add-to-cart">
+                            <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
+                        </button>
+                        <button class="detail">
+                            <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
+                        </button>
+                    </div>
+            </div>
+        </div>
     </div>
     <!--    End Content-->
     <!--    Begin Footer-->
@@ -114,7 +133,7 @@
 <!--Begin Login-->
 <div id="login">
     <!-- Modal -->
-    <div class="modal fade pt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade pt-2" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content pl-3 pr-3" style="background: #efefef">
                 <div class="modal-header">
