debug in product.html

--- a/product.html
+++ b/product.html
@@ -78,6 +78,7 @@
                             <a href="#"><i class="fa-solid fa-circle-info"></i></a>Chi Tiết
                         </button>
                     </div>
+                </div>
             </div>
         </div>
     </div>
