--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!--    End SlideShow-->
     <!--    Begin Content-->
     <div id="content">
-        <div class="container pt-4 d-flex justify-content-center row mt-4 mb-4 ml-auto mr-auto">
+        <div class="container pt-4 d-flex justify-content-center row pb-4 ml-auto mr-auto">
             <div class="brand col-lg-2">
                 <a href="">
                     <img src="image/brand/office-365.png" alt="">
