update about-us file

--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
             <p>Với mức giá ưu đãi và nhiều chương trình khuyến mãi khác nhau. Hạc key cam kết sẽ đem lại nhiều sản phẩm chất lượng hơn nữa.</p>
             </div>
         <div class="content-right">
-            <img class="img-right" src="image/about-us1.jpg">
+            <img class="img-right" src="image/about-us.png">
         </div>
     </div>
     <!--    Begin Footer-->
