--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
                         </div>
                     </span>
                 <span class="icon-item">
-                        <span><i class="fa-solid fa-bag-shopping"></i></span>
+                        <span><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></span>
                         <span>0</span>
                     </span>
                 <span class="icon-item">
@@ -75,6 +75,7 @@
                 <div class="product_price"><p>Giá tiền</p></div>
                 <div class="product_quantity"><p>Số lượng</p></div>
                 <div class="product_total"><p>Tổng cộng</p></div>
+                <div class="remove_button">&nbsp;</div>
             </div>
             <div class="product_contain">
                 <div class="image">
@@ -87,9 +88,13 @@
                 <div class="price"><p>400.000 VND</p></div>
                 <div class="quantity">
                     <input type="number" value="1" min="1">
+                </div>
+                <div class="total">
+                    <p>400.000 VND</p>
+                </div>
+                <div class="remove">
                     <button><i class="fas fa-trash-alt"></i></button>
                 </div>
-                <div class="total"><p>400.000 VND</p></div>
             </div>
             <div class="product_contain">
                 <div class="image">
@@ -102,24 +107,32 @@
                 <div class="price"><p>300.000 VND</p></div>
                 <div class="quantity">
                     <input type="number" value="2" min="1">
+                </div>
+                <div class="total">
+                    <p>600.000 VND</p>
+                </div>
+                <div class="remove">
                     <button><i class="fas fa-trash-alt"></i></button>
                 </div>
-                <div class="total"><p>600.000 VND</p></div>
             </div>
             <div class="total_price">
                 <div class="discount_code">
-                    <p>Nhập mã giảm giá tại đây:</p>
-                    <input type="text" id="discount" placeholder="Mã giảm giá">
-                    <button><i class="fas fa-chevron-right"></i></button>
+                    <div class="discount_contain">
+                        <p>Nhập mã giảm giá tại đây:</p>
+                        <input type="text" id="discount" placeholder="Mã giảm giá">
+                        <button><i class="fas fa-chevron-right"></i></button>
+                    </div>
                 </div>
                 <div class="subtotal cf">
-                    <ul>
-                        <li class="totalRow"><span class="label">Tổng cộng:</span><span class="value">1.000.000 VND</span></li>
-                        <li class="totalRow"><span class="label">Chi phí vận chuyển:</span><span class="value">Miễn phí</span></li>
-                        <li class="totalRow"><span class="label">Thuế VAT (10%):</span><span class="value">100.000 VND</span></li>
-                        <li class="totalRow final"><span class="label">Thành tiền:</span><span class="value">1.100.000 VND</span></li>
-                        <li class="totalRow_button"><a href="#" class="btn_payment">Thanh toán</a></li>
-                    </ul>
+                    <div class="total_contain">
+                        <ul>
+                            <li class="totalRow"><span class="label">Tổng cộng:</span><span class="value">1.000.000 VND</span></li>
+                            <li class="totalRow"><span class="label">Chi phí vận chuyển:</span><span class="value">Miễn phí</span></li>
+                            <li class="totalRow"><span class="label">Thuế VAT (10%):</span><span class="value">100.000 VND</span></li>
+                            <li class="totalRow final"><span class="label">Thành tiền:</span><span class="value">1.100.000 VND</span></li>
+                            <li class="totalRow_button"><a href="#" class="btn_payment">Thanh toán</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -174,6 +187,88 @@
     <a class="link-btt" href="#main"><i class="fa-sharp fa-solid fa-arrow-up"></i></a>
 </div>
 <!--    End Back to top-->
+
+<!--Begin Login-->
+<div id="login">
+    <!-- Modal -->
+    <div class="modal fade pt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content pl-3 pr-3" style="background: #efefef">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Đăng nhập để tiếp tục</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="body-container">
+                        <div class="choose d-flex">
+                            <div class="sign-in-choose w-50 text-center">Đăng nhập</div>
+                            <div class="sign-up-choose w-50 text-center">Đăng kí</div>
+                        </div>
+                        <div class="sign-in-container">
+                            <form action="">
+                                <div class="input-information">
+                                    <i class="fa-solid fa-user"></i>
+                                    <input type="text" name="uname" placeholder="Tài khoản hoặc Email">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass" placeholder="Mật khẩu">
+                                </div>
+                            </form>
+                            <div class="remember-forgot">
+                                <div class="remember">
+                                    <input type="checkbox" name="check">Nhớ mật khẩu
+                                </div>
+                                <a href="#">Quên mật khẩu</a>
+                            </div>
+                            <div class="btn-login-container">
+                                <button class="btn-login btn-sign-in" type="button">Đăng nhập</button>
+                            </div>
+                        </div>
+                        <div class="sign-up-container">
+                            <form action="">
+                                <div class="input-information">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    <input type="email" name="email-sign-up" placeholder="Email">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-phone"></i>
+                                    <input type="number" name="phone-sign-up" placeholder="Số điện thoại">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass-sign-up" placeholder="Mật khẩu">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass-sign-up" placeholder="Nhập lại mật khẩu">
+                                </div>
+                            </form>
+                            <div class="btn-login-container">
+                                <button class="btn-login btn-sign-up" type="button">Đăng ký</button>
+                            </div>
+                        </div>
+                        <p class="text-center">Hoặc</p>
+                        <div class="login-with">
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-google"></i></a>
+                            <a href="#"><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Login-->
+
+<!--    Script-->
+<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/slideShow.js"></script>
 
 </body>
 </html>
