--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
                 <div class="col-8">
                     <ul class="drop-menu">
                         <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
-                        <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
+                        <li class="menu-item"><a class="p-3" href="product.html">Sản Phẩm</a></li>
                         <li class="menu-item"><a class="p-3" href="about-us.html">Giới Thiệu</a></li>
                         <li class="menu-item"><a class="p-3" href="contact.html">Liên Hệ</a></li>
                     </ul>
@@ -48,12 +48,17 @@
                         </div>
                     </span>
                     <span class="icon-item">
-                        <span><i class="fa-solid fa-bag-shopping"></i></span>
-                        <span>0</span>
+                        <a href="cart.html">
+                            <span class="icon-cart">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            <span class="amount-cart">0</span>
+                        </span>
+                        </a>
                     </span>
                     <span class="icon-item">
                         <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
-                                 data-target="#exampleModal"></i></span>
+                                 data-target="#exampleModal"></i>
+                        </span>
                     </span>
                 </div>
             </div>
