--- a/cart.html
+++ b/cart.html
@@ -44,8 +44,12 @@
                         </div>
                     </span>
                 <span class="icon-item">
-                        <span><i class="fa-solid fa-bag-shopping"></i></span>
-                        <span>0</span>
+                        <a href="cart.html">
+                            <span class="icon-cart">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            <span class="amount-cart">0</span>
+                        </span>
+                        </a>
                     </span>
                 <span class="icon-item">
                         <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
