--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <span class="icon-item search">
                         <span id="icon-search"><i class="fa-solid fa-magnifying-glass"></i></span>
                         <div id="search-container">
+                            <div class="arrow-search"></div>
                             <p class="title-in-search text-center">TÌM KIẾM</p>
                             <div class="box-search d-flex">
                                 <input type="search" placeholder="Nhập tìm kiếm ở đây">
@@ -45,8 +46,12 @@
                         </div>
                     </span>
                     <span class="icon-item">
-                        <span><i class="fa-solid fa-bag-shopping"></i></span>
-                        <span>0</span>
+                        <a href="cart.html">
+                            <span class="icon-cart">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            <span class="amount-cart">0</span>
+                        </span>
+                        </a>
                     </span>
                     <span class="icon-item">
                         <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
